fixed spacing C/F

--- a/src/SearchEngine.css
+++ b/src/SearchEngine.css
@@ -63,8 +63,9 @@ cursor: pointer;
 }
 
 .far {
-margin-left:12px;
+margin-left:3px;
 }
+
 
 .celsius-far-cel{
 margin-left:-25px;
